# admin/server/magic_tokens.go
@@ -49,13 +49,19 @@ func (s *Server) IssueMagicAuthToken(ctx context.Context, req *adminv1.IssueMagi
 		return nil, status.Error(codes.PermissionDenied, "not allowed to create a magic auth token")
 	}
 
+	resources := make([]database.ResourceName, len(req.Resources))
+	for i, r := range req.Resources {
+		resources[i] = database.ResourceName{
+			Type: r.Type,
+			Name: r.Name,
+		}
+	}
 	opts := &admin.IssueMagicAuthTokenOptions{
-		ProjectID:    proj.ID,
-		ResourceType: req.ResourceType,
-		ResourceName: req.ResourceName,
-		Fields:       req.Fields,
-		State:        req.State,
-		DisplayName:  req.DisplayName,
+		ProjectID:   proj.ID,
+		Fields:      req.Fields,
+		State:       req.State,
+		DisplayName: req.DisplayName,
+		Resources:   resources,
 	}
 
 	if req.TtlMinutes != 0 {
@@ -273,6 +279,14 @@ func (s *Server) magicAuthTokenToPB(tkn *database.MagicAuthTokenWithUser, org *d
 		url = s.admin.URLs.WithCustomDomain(org.CustomDomain).MagicAuthTokenOpen(org.Name, proj.Name, tokenStr)
 	}
 
+	rs := make([]*adminv1.ResourceName, len(tkn.Resources))
+	for i, r := range tkn.Resources {
+		rs[i] = &adminv1.ResourceName{
+			Type: r.Type,
+			Name: r.Name,
+		}
+	}
+
 	res := &adminv1.MagicAuthToken{
 		Id:                 tkn.ID,
 		ProjectId:          tkn.ProjectID,
@@ -284,12 +298,11 @@ func (s *Server) magicAuthTokenToPB(tkn *database.MagicAuthTokenWithUser, org *d
 		CreatedByUserId:    safeStr(tkn.CreatedByUserID),
 		CreatedByUserEmail: tkn.CreatedByUserEmail,
 		Attributes:         attrs,
-		ResourceType:       tkn.ResourceType,
-		ResourceName:       tkn.ResourceName,
 		Filter:             filter,
 		Fields:             tkn.Fields,
 		State:              tkn.State,
 		DisplayName:        tkn.DisplayName,
+		Resources:          rs,
 	}
 	if tkn.ExpiresOn != nil {
 		res.ExpiresOn = timestamppb.New(*tkn.ExpiresOn)
